force-app/main/default/objects/Subscription_Outbox__c/Subscription_Outbox__c.object-meta.xml
<CustomObject>
    <description>Transactional Outbox tracking for each subscriber of an message</description>
    <label>Subscription Outbox</label>
    <nameField>
        <label>Subscription Outbox Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Subscription Outboxes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>