force-app/main/default/objects/Subscription_Outbox__c/fields/Application__c.field-meta.xml
<CustomField>
    <fullName>Application__c</fullName>
    <description>The DeveloperName of the related Application__mdt</description>
    <inlineHelpText>The DeveloperName of the related Application__mdt</inlineHelpText>
    <label>Application</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>