force-app/main/default/objects/Subscription_Outbox__c/fields/Completed_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>Completed_Timestamp__c</fullName>
    <description>The timestamp which this outbox was completed (successful message on relay)</description>
    <inlineHelpText>The timestamp which this outbox was completed (successful message on relay)</inlineHelpText>
    <label>Completed Timestamp</label>
    <type>DateTime</type>
</CustomField>