force-app/main/default/objects/Subscription_Outbox__c/fields/Dead_Lettered__c.field-meta.xml
<CustomField>
    <fullName>Dead_Lettered__c</fullName>
    <description>Once a message is dead lettered, Message Relay will no longer be attempted</description>
    <formula>Relay_Attempts__c &gt;  Max_Attempts__c || Manual_Deadletter__c == true</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Once a message is dead lettered, Message Relay will no longer be attempted.</inlineHelpText>
    <label>Dead Lettered</label>
    <type>Checkbox</type>
</CustomField>