force-app/main/default/objects/Subscription_Outbox__c/fields/Group_Id__c.field-meta.xml
<CustomField>
    <fullName>Group_Id__c</fullName>
    <description>The AppId + Group Id used to prevent processing once one of the messages in the group is dead lettered</description>
    <formula>IF(ISBLANK(Outbox_Message__r.Group_Id__c), null, Application__c + &apos;-&apos; + Outbox_Message__r.Group_Id__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The AppId + Group Id used to prevent processing once one of the messages in the group is dead lettered</inlineHelpText>
    <label>Group Id</label>
    <type>Text</type>
</CustomField>