force-app/main/default/objects/Subscription_Outbox__c/fields/Last_Attempt__c.field-meta.xml
<CustomField>
    <fullName>Last_Attempt__c</fullName>
    <description>The Timestamp of the Last Attempt</description>
    <inlineHelpText>The Timestamp of the Last Attempt</inlineHelpText>
    <label>Last Attempt</label>
    <type>DateTime</type>
</CustomField>