force-app/main/default/objects/Subscription_Outbox__c/fields/Last_Error_Message__c.field-meta.xml
<CustomField>
    <fullName>Last_Error_Message__c</fullName>
    <description>The error message returned by the last attempt of the outbox request</description>
    <inlineHelpText>The error message returned by the last attempt of the outbox request</inlineHelpText>
    <label>Last Error Message</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>