force-app/main/default/objects/Subscription_Outbox__c/fields/Max_Attempts__c.field-meta.xml
<CustomField>
    <fullName>Max_Attempts__c</fullName>
    <defaultValue>3</defaultValue>
    <description>The Maximum number of times to attempt to deliver this message.</description>
    <inlineHelpText>The Maximum number of times to attempt to deliver this message.</inlineHelpText>
    <label>Max Attempts</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>