force-app/main/default/objects/Subscription_Outbox__c/fields/Outbox_Message__c.field-meta.xml
<CustomField>
    <fullName>Outbox_Message__c</fullName>
    <description>The message this outbox item corresponds to</description>
    <inlineHelpText>The message this outbox item corresponds to</inlineHelpText>
    <label>Outbox Message</label>
    <referenceTo>Outbox_Message__c</referenceTo>
    <relationshipLabel>Subscription Outboxes</relationshipLabel>
    <relationshipName>Subscription_Outboxes</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>