force-app/main/default/objects/Subscription_Outbox__c/fields/Relay_Attempts__c.field-meta.xml
<CustomField>
    <fullName>Relay_Attempts__c</fullName>
    <defaultValue>0</defaultValue>
    <description>The number of times this outbox message has been attempted</description>
    <inlineHelpText>The number of times this outbox message has been attempted</inlineHelpText>
    <label>Relay Attempts</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>