force-app/main/default/objects/Subscription_Outbox__c/fields/Subscription__c.field-meta.xml
<CustomField>
    <fullName>Subscription__c</fullName>
    <description>The subscription that this outbox message is firing for.  Should match based on name in Message Subscription Definitions</description>
    <externalId>true</externalId>
    <inlineHelpText>The subscription that this outbox message is firing for.  Should match based on name in Message Subscription Definitions</inlineHelpText>
    <label>Subscription</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>